force-app/main/default/objects/Request_Item__c/Request_Item__c.object-meta.xml
<CustomObject>
    <label>Request Item</label>
    <nameField>
        <label>Request Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>