force-app/main/default/objects/Request_Item__c/fields/All_Receipt_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>All_Receipt_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Receipt Uploaded</label>
    <type>Checkbox</type>
</CustomField>