force-app/main/default/objects/Request_Item__c/fields/Amount_Approved_1__c.field-meta.xml
<CustomField>
    <fullName>Amount_Approved_1__c</fullName>
    <label>Amount Approved 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>