force-app/main/default/objects/Request_Item__c/fields/Amount_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Items__c</fullName>
    <label>כמות</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>