force-app/main/default/objects/Request_Item__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact in Request Item</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Request Items</relationshipLabel>
    <relationshipName>Request_Items</relationshipName>
    <type>Lookup</type>
</CustomField>