force-app/main/default/objects/Request_Item__c/fields/Cost_Per_Items__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Items__c</fullName>
    <label>עלות ליחידה</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>