force-app/main/default/objects/Request_Item__c/fields/File_Exists__c.field-meta.xml
<CustomField>
    <fullName>File_Exists__c</fullName>
    <formula>IF( Number_of_FIles__c &gt; 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Exists</label>
    <type>Checkbox</type>
</CustomField>