force-app/main/default/objects/Request_Item__c/fields/Invoice_Received__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Received</label>
    <type>Checkbox</type>
</CustomField>