force-app/main/default/objects/Request_Item__c/fields/Is_Item_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Is_Item_Compliant__c</fullName>
    <formula>AND(
         (Item_cancelled__c = False),

           NOT(   ISBLANK( Amount_Approved__c )  ) ,   
  

          OR(   Amount_Approved__c = 0,
               

                AND(  Amount_Approved__c &gt; 0,

                      Invoice_Received__c = true   ) 
                      
              ) 
        )</formula>
    <label>Is Item Compliant</label>
    <type>Checkbox</type>
</CustomField>