force-app/main/default/objects/Request_Item__c/fields/Item_cancelled__c.field-meta.xml
<CustomField>
    <fullName>Item_cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Item cancelled</label>
    <type>Checkbox</type>
</CustomField>