force-app/main/default/objects/Request_Item__c/fields/Item_cancelled_reason__c.field-meta.xml
<CustomField>
    <fullName>Item_cancelled_reason__c</fullName>
    <label>Item cancelled reason</label>
    <type>TextArea</type>
</CustomField>