force-app/main/default/objects/Request_Item__c/fields/Notes_after_Committee__c.field-meta.xml
<CustomField>
    <fullName>Notes_after_Committee__c</fullName>
    <label>Notes after Committee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>