force-app/main/default/objects/Request_Item__c/fields/Number_of_FIles__c.field-meta.xml
<CustomField>
    <fullName>Number_of_FIles__c</fullName>
    <label>Number of FIles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>