force-app/main/default/objects/Request_Item__c/fields/Price_List_Item__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Item__c</fullName>
    <label>Price List Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Price_list_item__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Price_list_item__c</referenceTo>
    <relationshipLabel>Request Items</relationshipLabel>
    <relationshipName>Request_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>