force-app/main/default/objects/Request_Item__c/fields/Price_List_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Item_Name__c</fullName>
    <formula>Price_List_Item__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price List Item Name</label>
    <type>Text</type>
</CustomField>