force-app/main/default/objects/Request_Item__c/fields/Price_list_Price__c.field-meta.xml
<CustomField>
    <fullName>Price_list_Price__c</fullName>
    <formula>Price_List_Item__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price list Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>