force-app/main/default/objects/Request_Item__c/fields/Quote_Received__c.field-meta.xml
<CustomField>
    <fullName>Quote_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Received</label>
    <type>Checkbox</type>
</CustomField>