force-app/main/default/objects/Request_Item__c/fields/Request_Price_List_Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Request_Price_List_Item_Category__c</fullName>
    <formula>TEXT(Price_List_Item__r.Price_List_Item_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Price List Item Category</label>
    <type>Text</type>
</CustomField>