force-app/main/default/objects/Request_Item__c/fields/Show_Item_in_Form__c.field-meta.xml
<CustomField>
    <fullName>Show_Item_in_Form__c</fullName>
    <formula>if(
or(
 casesafeid(Opportunity__r.CampaignId )=&quot;701N200000nCv3QIAS&quot;,
and(
 Amount_Approved__c &gt;0,
 Invoice_Received__c =false,
 All_Receipt_Uploaded__c =false
)),
true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Item in Form</label>
    <type>Checkbox</type>
</CustomField>