force-app/main/default/objects/Request_Item__c/fields/Unchecked_Receipt_Count__c.field-meta.xml
<CustomField>
    <fullName>Unchecked_Receipt_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unchecked Receipt Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>