force-app/main/default/objects/Request_Item__c/fields/Unchecked_Receipt_Sum__c.field-meta.xml
<CustomField>
    <fullName>Unchecked_Receipt_Sum__c</fullName>
    <label>Unchecked Receipt Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>