force-app/main/default/objects/Request_Item__c/fields/Unit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unit_Amount__c</fullName>
    <label>Unit Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>