force-app/main/default/objects/Request_Item__c/fields/Updated_by_flow__c.field-meta.xml
<CustomField>
    <fullName>Updated_by_flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated by flow</label>
    <type>Checkbox</type>
</CustomField>