force-app/main/default/objects/Request_Item__c/fields/vrOppStage__c.field-meta.xml
<CustomField>
    <fullName>vrOppStage__c</fullName>
    <formula>text(Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>vrOppStage</label>
    <type>Text</type>
</CustomField>