force-app/main/default/objects/Request_Item__c/validationRules/Amount_Not_Editable_When_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Not_Editable_When_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>(
ISPICKVAL(Opportunity__r.StageName , &quot;Finished&quot;) ||
ISPICKVAL(Opportunity__r.StageName , &quot;Transferred to ERP&quot;) ||
ISPICKVAL(Opportunity__r.StageName , &quot;Ready for transfer to ERP&quot;)
) &amp;&amp;
ISCHANGED( Amount_Approved__c )</errorConditionFormula>
    <errorDisplayField>Amount_Approved__c</errorDisplayField>
    <errorMessage>לא ניתן לערוך כי הבקשה נסגרה</errorMessage>
</ValidationRule>