force-app/main/default/objects/Request_Item__c/validationRules/OppStagesAllowedforRequests.validationRule-meta.xml
<ValidationRule>
    <fullName>OppStagesAllowedforRequests</fullName>
    <active>false</active>
    <description>opp stages that are allowed to add request items in.</description>
    <errorConditionFormula>OR(vrOppStage__c =&quot;Finished&quot;,vrOppStage__c =&quot;Transferred to ERP&quot;)</errorConditionFormula>
    <errorMessage>Requests aren&apos;t allowed to be modified in the current stage</errorMessage>
</ValidationRule>