force-app/main/default/objects/Request_Item__c/validationRules/Requested_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Requested_Amount</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Requested_Amount__c )</errorConditionFormula>
    <errorDisplayField>Requested_Amount__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>