force-app/main/default/objects/Request_Item__c/listViews/Request_Item_per_Family.listView-meta.xml
<ListView>
    <fullName>Request_Item_per_Family</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Amount_Approved__c</columns>
    <columns>Notes_after_Committee__c</columns>
    <columns>Invoice_Received__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Price_List_Item__c</columns>
    <columns>Price_List_Item_Name__c</columns>
    <columns>Requested_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity__c</field>
        <operation>equals</operation>
        <value>משפחת שדדי</value>
    </filters>
    <label>Request Item per Family</label>
</ListView>